--- a/config_short.yaml
+++ b/config_short.yaml
@@ -2,51 +2,55 @@ output_file: docker-compose.yaml
 
 # Configuración de monitores
 monitors:
-  count: 1
+  count: 3
   base_port: 50000
   cluster_base_port: 50010
   # Configuración de heartbeat (muy rápido para testing)
   heartbeat_interval: 2000      # 2 segundos
   heartbeat_timeout: 8000       # 8 segundos
   election_timeout: 5000        # 5 segundos
+  kill: true
 
 clients:
   - id: 1
     files_path: ./files/short
 
+client_decodifier:
+    kill: false
+
 workers:
   twentieth_century:
-    count: 1
+    count: 2
     log_level: INFO
     kill: true
   main_movie:
-    count: 1
+    count: 2
     log_level: DEBUG
     kill: true
   esp_production:
-    count: 1
+    count: 2
     log_level: INFO
     kill: true
   no_colab_productions:
-    count: 1
+    count: 2
     log_level: INFO
     kill: true
   sentiment:
-    count: 1
+    count: 0
     log_level: INFO
-    kill: false
+    kill: true
   arg_production:
-    count: 1
+    count: 2
     log_level: INFO
     kill: true
   credits:
-    count: 1
+    count: 2
     log_level: INFO
-    kill: false
+    kill: true
   ratings:
-    count: 1
+    count: 2
     log_level: INFO
-    kill: false
+    kill: true
 
 aggregators:
   twentieth_century_arg_esp:
@@ -64,16 +68,16 @@ aggregators:
   top_10_credits:
     generate: true
     log_level: INFO
-    kill: false
+    kill: true
   best_and_worst_ratings:
     generate: true
     log_level: INFO
-    kill: false
+    kill: true
   sentiment:
-    generate: true
+    generate: false
     log_level: INFO
-    kill: false
+    kill: true
 
 test:
-  random: true
-  interval: 11
+  random: false
+  interval: 1
