--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,8 +20,31 @@ services:
     - LOG_LEVEL=INFO
     - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
     - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=arg_production_filter_1
+    image: arg_production_filter:latest
+    links:
+    - rabbitmq
+  arg_production_filter_2:
+    container_name: arg_production_filter_2
+    depends_on:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - LOG_LEVEL=INFO
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
+    - HEARTBEAT_INTERVAL=2000
+    - SERVICE_NAME=arg_production_filter_2
     image: arg_production_filter:latest
     links:
     - rabbitmq
@@ -46,7 +69,7 @@ services:
     - LOG_LEVEL=INFO
     - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
     - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=best_and_worst_ratings_aggregator
     links:
     - rabbitmq
@@ -71,13 +94,13 @@ services:
     - CLIENT_ID=1
     - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
     - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=client_1
     volumes:
-    - ./files/long/movies_metadata.csv:/root/files/movies_metadata.csv
-    - ./files/long/credits.csv:/root/files/credits.csv
-    - ./files/long/ratings.csv:/root/files/ratings.csv
-    - ./results/long/results.json:/root/results/results.json
+    - ./files/short/movies_metadata.csv:/root/files/movies_metadata.csv
+    - ./files/short/credits.csv:/root/files/credits.csv
+    - ./files/short/ratings.csv:/root/files/ratings.csv
+    - ./results/short/results.json:/root/results/results.json
   client_decodifier:
     build:
       context: .
@@ -97,7 +120,7 @@ services:
     environment:
     - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
     - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=client_decodifier
     healthcheck:
       interval: 5s
@@ -128,8 +151,31 @@ services:
     - JOINER_INSTANCE_ID=credits-1
     - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
     - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=credits_joiner_1
+    image: credits_joiner:latest
+    links:
+    - rabbitmq
+  credits_joiner_2:
+    container_name: credits_joiner_2
+    depends_on:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - LOG_LEVEL=INFO
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
+    - HEARTBEAT_INTERVAL=2000
+    - SERVICE_NAME=credits_joiner_2
     image: credits_joiner:latest
     links:
     - rabbitmq
@@ -154,7 +200,7 @@ services:
     - LOG_LEVEL=INFO
     - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
     - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=esp_production_filter_1
     image: esp_production_filter:latest
     links:
@@ -177,7 +223,7 @@ services:
     - LOG_LEVEL=INFO
     - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
     - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=esp_production_filter_2
     image: esp_production_filter:latest
     links:
@@ -200,10 +246,10 @@ services:
         condition: service_started
     environment:
     - PYTHONUNBUFFERED=1
-    - LOG_LEVEL=INFO
+    - LOG_LEVEL=DEBUG
     - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
     - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=main_movie_filter_1
     image: main_movie_filter:latest
     links:
@@ -223,10 +269,10 @@ services:
         condition: service_started
     environment:
     - PYTHONUNBUFFERED=1
-    - LOG_LEVEL=INFO
+    - LOG_LEVEL=DEBUG
     - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
     - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=main_movie_filter_2
     image: main_movie_filter:latest
     links:
@@ -240,12 +286,12 @@ services:
     - PYTHONUNBUFFERED=1
     - MONITOR_SERVICE_PORT=50001
     - MONITOR_CLUSTER_PORT=50011
-    - HEARTBEAT_INTERVAL=100
-    - HEARTBEAT_TIMEOUT=3000
-    - ELECTION_TIMEOUT=1000
+    - HEARTBEAT_INTERVAL=2000
+    - HEARTBEAT_TIMEOUT=8000
+    - ELECTION_TIMEOUT=5000
     - MONITOR_NODE_ID=1
     - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
-    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter_1,twentieth_century_filter_2,arg_production_filter_1,credits_joiner_1,ratings_joiner_1,main_movie_filter_1,main_movie_filter_2,esp_production_filter_1,esp_production_filter_2,no_colab_productions_filter_1,sentiment_filter_1,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator,sentiment_aggregator
+    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter_1,twentieth_century_filter_2,arg_production_filter_1,arg_production_filter_2,credits_joiner_1,credits_joiner_2,ratings_joiner_1,ratings_joiner_2,main_movie_filter_1,main_movie_filter_2,esp_production_filter_1,esp_production_filter_2,no_colab_productions_filter_1,no_colab_productions_filter_2,sentiment_filter_1,sentiment_filter_2,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator
     ports:
     - 50001:50001
     - 50011:50011
@@ -260,12 +306,12 @@ services:
     - PYTHONUNBUFFERED=1
     - MONITOR_SERVICE_PORT=50002
     - MONITOR_CLUSTER_PORT=50012
-    - HEARTBEAT_INTERVAL=100
-    - HEARTBEAT_TIMEOUT=3000
-    - ELECTION_TIMEOUT=1000
+    - HEARTBEAT_INTERVAL=2000
+    - HEARTBEAT_TIMEOUT=8000
+    - ELECTION_TIMEOUT=5000
     - MONITOR_NODE_ID=2
     - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
-    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter_1,twentieth_century_filter_2,arg_production_filter_1,credits_joiner_1,ratings_joiner_1,main_movie_filter_1,main_movie_filter_2,esp_production_filter_1,esp_production_filter_2,no_colab_productions_filter_1,sentiment_filter_1,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator,sentiment_aggregator
+    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter_1,twentieth_century_filter_2,arg_production_filter_1,arg_production_filter_2,credits_joiner_1,credits_joiner_2,ratings_joiner_1,ratings_joiner_2,main_movie_filter_1,main_movie_filter_2,esp_production_filter_1,esp_production_filter_2,no_colab_productions_filter_1,no_colab_productions_filter_2,sentiment_filter_1,sentiment_filter_2,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator
     ports:
     - 50002:50002
     - 50012:50012
@@ -280,12 +326,12 @@ services:
     - PYTHONUNBUFFERED=1
     - MONITOR_SERVICE_PORT=50003
     - MONITOR_CLUSTER_PORT=50013
-    - HEARTBEAT_INTERVAL=100
-    - HEARTBEAT_TIMEOUT=3000
-    - ELECTION_TIMEOUT=1000
+    - HEARTBEAT_INTERVAL=2000
+    - HEARTBEAT_TIMEOUT=8000
+    - ELECTION_TIMEOUT=5000
     - MONITOR_NODE_ID=3
     - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
-    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter_1,twentieth_century_filter_2,arg_production_filter_1,credits_joiner_1,ratings_joiner_1,main_movie_filter_1,main_movie_filter_2,esp_production_filter_1,esp_production_filter_2,no_colab_productions_filter_1,sentiment_filter_1,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator,sentiment_aggregator
+    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter_1,twentieth_century_filter_2,arg_production_filter_1,arg_production_filter_2,credits_joiner_1,credits_joiner_2,ratings_joiner_1,ratings_joiner_2,main_movie_filter_1,main_movie_filter_2,esp_production_filter_1,esp_production_filter_2,no_colab_productions_filter_1,no_colab_productions_filter_2,sentiment_filter_1,sentiment_filter_2,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator
     ports:
     - 50003:50003
     - 50013:50013
@@ -312,8 +358,31 @@ services:
     - LOG_LEVEL=INFO
     - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
     - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=no_colab_productions_filter_1
+    image: no_colab_productions_filter:latest
+    links:
+    - rabbitmq
+  no_colab_productions_filter_2:
+    container_name: no_colab_productions_filter_2
+    depends_on:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - LOG_LEVEL=INFO
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
+    - HEARTBEAT_INTERVAL=2000
+    - SERVICE_NAME=no_colab_productions_filter_2
     image: no_colab_productions_filter:latest
     links:
     - rabbitmq
@@ -352,16 +421,13 @@ services:
     - JOINER_INSTANCE_ID=ratings-1
     - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
     - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=ratings_joiner_1
     image: ratings_joiner:latest
     links:
     - rabbitmq
-  sentiment_aggregator:
-    build:
-      context: .
-      dockerfile: aggregator/sentiment_aggregator/aggregator.dockerfile
-    container_name: sentiment_aggregator
+  ratings_joiner_2:
+    container_name: ratings_joiner_2
     depends_on:
       monitor_1:
         condition: service_started
@@ -378,8 +444,9 @@ services:
     - LOG_LEVEL=INFO
     - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
     - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
-    - SERVICE_NAME=sentiment_aggregator
+    - HEARTBEAT_INTERVAL=2000
+    - SERVICE_NAME=ratings_joiner_2
+    image: ratings_joiner:latest
     links:
     - rabbitmq
   sentiment_filter:
@@ -403,8 +470,31 @@ services:
     - LOG_LEVEL=INFO
     - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
     - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=sentiment_filter_1
+    image: sentiment_filter:latest
+    links:
+    - rabbitmq
+  sentiment_filter_2:
+    container_name: sentiment_filter_2
+    depends_on:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - LOG_LEVEL=INFO
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
+    - HEARTBEAT_INTERVAL=2000
+    - SERVICE_NAME=sentiment_filter_2
     image: sentiment_filter:latest
     links:
     - rabbitmq
@@ -429,7 +519,7 @@ services:
     - LOG_LEVEL=INFO
     - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
     - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=top_10_credits_aggregator
     links:
     - rabbitmq
@@ -454,7 +544,7 @@ services:
     - LOG_LEVEL=INFO
     - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
     - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=top_5_countries_aggregator
     links:
     - rabbitmq
@@ -479,7 +569,7 @@ services:
     - LOG_LEVEL=INFO
     - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
     - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=twentieth_century_arg_aggregator
     links:
     - rabbitmq
@@ -504,7 +594,7 @@ services:
     - LOG_LEVEL=INFO
     - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
     - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=twentieth_century_arg_esp_aggregator
     links:
     - rabbitmq
@@ -529,7 +619,7 @@ services:
     - LOG_LEVEL=INFO
     - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
     - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=twentieth_century_filter_1
     image: twentieth_century_filter:latest
     links:
@@ -552,7 +642,7 @@ services:
     - LOG_LEVEL=INFO
     - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
     - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=twentieth_century_filter_2
     image: twentieth_century_filter:latest
     links:
@@ -571,6 +661,6 @@ services:
     environment:
     - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
     - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=100
+    - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=worker
     image: worker:latest
