--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -291,7 +291,7 @@ services:
     - ELECTION_TIMEOUT=5000
     - MONITOR_NODE_ID=1
     - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
-    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter_1,twentieth_century_filter_2,arg_production_filter_1,arg_production_filter_2,credits_joiner_1,credits_joiner_2,ratings_joiner_1,ratings_joiner_2,main_movie_filter_1,main_movie_filter_2,esp_production_filter_1,esp_production_filter_2,no_colab_productions_filter_1,no_colab_productions_filter_2,sentiment_filter_1,sentiment_filter_2,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator
+    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter_1,twentieth_century_filter_2,arg_production_filter_1,arg_production_filter_2,credits_joiner_1,credits_joiner_2,ratings_joiner_1,ratings_joiner_2,main_movie_filter_1,main_movie_filter_2,esp_production_filter_1,esp_production_filter_2,no_colab_productions_filter_1,no_colab_productions_filter_2,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator
     ports:
     - 50001:50001
     - 50011:50011
@@ -311,7 +311,7 @@ services:
     - ELECTION_TIMEOUT=5000
     - MONITOR_NODE_ID=2
     - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
-    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter_1,twentieth_century_filter_2,arg_production_filter_1,arg_production_filter_2,credits_joiner_1,credits_joiner_2,ratings_joiner_1,ratings_joiner_2,main_movie_filter_1,main_movie_filter_2,esp_production_filter_1,esp_production_filter_2,no_colab_productions_filter_1,no_colab_productions_filter_2,sentiment_filter_1,sentiment_filter_2,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator
+    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter_1,twentieth_century_filter_2,arg_production_filter_1,arg_production_filter_2,credits_joiner_1,credits_joiner_2,ratings_joiner_1,ratings_joiner_2,main_movie_filter_1,main_movie_filter_2,esp_production_filter_1,esp_production_filter_2,no_colab_productions_filter_1,no_colab_productions_filter_2,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator
     ports:
     - 50002:50002
     - 50012:50012
@@ -331,7 +331,7 @@ services:
     - ELECTION_TIMEOUT=5000
     - MONITOR_NODE_ID=3
     - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
-    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter_1,twentieth_century_filter_2,arg_production_filter_1,arg_production_filter_2,credits_joiner_1,credits_joiner_2,ratings_joiner_1,ratings_joiner_2,main_movie_filter_1,main_movie_filter_2,esp_production_filter_1,esp_production_filter_2,no_colab_productions_filter_1,no_colab_productions_filter_2,sentiment_filter_1,sentiment_filter_2,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator
+    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter_1,twentieth_century_filter_2,arg_production_filter_1,arg_production_filter_2,credits_joiner_1,credits_joiner_2,ratings_joiner_1,ratings_joiner_2,main_movie_filter_1,main_movie_filter_2,esp_production_filter_1,esp_production_filter_2,no_colab_productions_filter_1,no_colab_productions_filter_2,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator
     ports:
     - 50003:50003
     - 50013:50013
@@ -447,55 +447,6 @@ services:
     - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=ratings_joiner_2
     image: ratings_joiner:latest
-    links:
-    - rabbitmq
-  sentiment_filter:
-    build:
-      context: .
-      dockerfile: filters/sentiment_analizer/sentiment_analizer.dockerfile
-    container_name: sentiment_filter_1
-    depends_on:
-      monitor_1:
-        condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=2000
-    - SERVICE_NAME=sentiment_filter_1
-    image: sentiment_filter:latest
-    links:
-    - rabbitmq
-  sentiment_filter_2:
-    container_name: sentiment_filter_2
-    depends_on:
-      monitor_1:
-        condition: service_started
-      monitor_2:
-        condition: service_started
-      monitor_3:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
-    - MONITOR_PORTS=50001,50002,50003
-    - HEARTBEAT_INTERVAL=2000
-    - SERVICE_NAME=sentiment_filter_2
-    image: sentiment_filter:latest
     links:
     - rabbitmq
   top_10_credits_aggregator:
